--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
         "alpinejs": "^2.7.3",
         "autoprefixer": "^10.0.2",
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.19",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "postcss-import": "^12.0.1",
+        "postcss": "^8.3.0",
+        "postcss-import": "^14.0.2",
         "tailwindcss": "^2.0.1"
+    },
+    "dependencies": {
+        "heroku": "^7.54.0"
     }
 }
